# Nano_Banana_Pro_Web

.gemini/: config.yaml
.github/workflows/: pr-check.yml  release.yml
backend/cmd/server/: main.go
backend/internal/api/: folders.go  handlers.go  task_timeout_reconcile.go
backend/internal/diagnostic/: errors.go  errors_test.go
backend/internal/model/: db.go  models.go
backend/internal/provider/: gemini.go  openai.go
backend/internal/storage/: storage.go
backend/internal/worker/: pool.go
desktop/: eslint.config.js  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src/components/GenerateArea/: ImagePreview.tsx
desktop/src/components/HistoryPanel/: AlbumView.tsx  FailedTaskCard.tsx  FolderCard.tsx  ImageCard.tsx
desktop/src/components/Onboarding/: OnboardingTour.tsx
desktop/src/components/Settings/: SettingsModal.tsx
desktop/src/hooks/: useGenerate.ts  useTaskRecovery.ts
desktop/src/i18n/locales/: en-US.json  ja-JP.json  ko-KR.json  zh-CN.json
desktop/src/services/: api.ts  folderApi.ts
desktop/src/store/: configStore.ts  generateStore.ts  historyStore.ts
desktop/src/types/: index.ts
desktop/src/utils/: errorI18n.ts  mapping.ts
frontend/: package.json
frontend/src/components/ConfigPanel/: ReferenceImageUpload.tsx
frontend/src/components/HistoryPanel/: AlbumView.tsx  FolderCard.tsx  ImageCard.tsx  ViewToggle.tsx  index.tsx
frontend/src/components/Settings/: SettingsModal.tsx
frontend/src/hooks/: useGenerate.ts
frontend/src/i18n/locales/: en-US.json  (+3 more)
frontend/src/store/: configStore.ts
(+1 files in other folders)
